--- a/hidapi/windows/hidapi.vcxproj
+++ b/hidapi/windows/hidapi.vcxproj
@@ -91,10 +91,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ghost.c" />
     <ClCompile Include="hid.c" />
+    <ClCompile Include="keymap.c" />
+    <ClCompile Include="map.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\hidapi\ghostapi.h" />
     <ClInclude Include="..\hidapi\hidapi.h" />
+    <ClInclude Include="..\hidapi\packdef.h" />
+    <ClInclude Include="keymap.h" />
+    <ClInclude Include="map.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
