--- a/hidapi/windows/hidapi.vcxproj.filters
+++ b/hidapi/windows/hidapi.vcxproj.filters
@@ -44,5 +44,13 @@
     <ClInclude Include="keymap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="hidapi.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
